# qt-cli_file_encryption-decryption

./: README.md
docs/: dot.env
src/: CMakeLists.txt  main.cpp
src/includes/: dotenv.h  rz_config.h  rz_options.h  rz_qt-aes.h  rz_snippets.h
